# my_robot_simulation_ROS_Gazebo

./: README.md  frames.gv  my_map_save.pgm  my_map_save.yaml  my_map_serial.data
articubot_one/: CMakeLists.txt  package.xml
articubot_one/config/: mapper_params_online_async.yaml
articubot_one/description/: gazebo_control.xacro  lidar.xacro  robot_core.xacro
articubot_one/launch/: launch_sim.launch.py  rsp.launch.py
articubot_one/src/: A_star.cpp  A_star_python.py  RRT.cpp
articubot_one/worlds/: ob_world.world
